# rshare

./: Cargo.toml  README.md
src/: cli.rs  main.rs  templates.rs  utils.rs
templates/: 404.html  list.html  video.html
