[package]
name = "rshare"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# http and async
warp = "0.3.3"
tokio = { version = "1", features = ["full"] }

# templates
tera = "1.17.1"

# logging
log = "0.4"
pretty_env_logger = "0.4"

dirs = "4.0.0"
clap = { version = "4.1.4", features = ["derive"] }
